<resources>
    <string name="app_name">My Application</string>
    <string name="b1">LOGIN</string>
    <string name="b2">REGISTER HERE</string>
    <string name="b3">REGISTER</string>
    <string name="b4">EDIT YOUR PROFILE</string>
    <string name="b5">BACK TO HOME</string>
    <string name="b6">UPDATE</string>
    <string name="b7">DELETE</string>
    <string name="b8">BACK</string>
    <string name="msg1">YOUR PROFILE</string>
</resources>